<resources>
    <string name="app_name">Carmera</string>
    <string name="capture">Capture</string>
    <string name="action_settings">Settings</string>
    <string name="history_logo">History</string>
    <string name="nearby_logo">Nearby</string>
    <string name="watch_list_logo">Watch List</string>
    <string name="parse_app_id">4C3g4JMvuWMEuTVeTtjoQdvxCOv80XHRtIYnM3Kg</string>
    <string name="parse_client_key">OTwE5Qi7WuZ4gs8q66T2nKrDArWPbph3u1CmPjP1</string>
    <string name="gms_api_key">AIzaSyDqZraFAjQluv_KAgF9CGGrAyEGbP9P-F8</string>
    <string name="debug_gms_api_key">AIzaSyAp58riqX9t1fS5bq84elOFkCoRBPP9JGg</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="context_menu">Select</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="edmunds_baseurl">http://media.ed.edmunds-media.com</string>
    <string name="aws_server">http://52.27.126.141:3000</string>
    <string name="loading_listings">Loading Listings...</string>
    <string name="make_title">Car Make</string>
    <string name="model_title">Car Model</string>
    <string name="years_title">Years</string>
    <string name="cond_title">Condition</string>
    <string name="radius_title">Distance</string>
    <string name="bodyType_title">Body Type</string>
    <string name="type_to_search">Type to Search</string>
    <string name="back_to_camera">Back to Camera</string>
    <string name="powertrain_search">Specs</string>
    <string name="hp_desc">Horsepower</string>
    <string name="tq_desc">Torque</string>
    <string name="fuel_consumption_desc">Fuel Consumption</string>
    <string name="city_desc">City MPG</string>
    <string name="hwy_desc">Highway MPG</string>
    <string name="transmission_desc">Transmission</string>
    <string name="tmv_desc">Used Market Value</string>
    <string name="msrp_desc">New MSRP</string>
    <string name="search">Search</string>
    <string name="edit_details">Edit Details</string>
    <string name="back">Back</string>
    <string name="zip_hint">Zipcode Here!</string>
    <string name="compare">Value Comparison</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="max_mileage">Max Mileage</string>
    <string name="to">TO</string>
    <string name="car_search">Search Cars</string>
    <string name="carmera">Carmera</string>
    <string name="settings">Settings</string>
    <string name="saved_listings">Saved Listings</string>
    <string name="listings_search_title">Listings Search</string>
    <string name="pref_key_zipcode">Zipcode</string>
    <string name="pref_zipcode_default">92612</string>
    <string name="pref_key_radius">Radius</string>
    <string name="pref_radius_default">50</string>
    <string name="save_and_drive">Save &amp; Drive</string>
    <string name="complaints">Complaints</string>
    <string name="safety">Safety</string>
    <string name="safety_equipments">Safety Equipments</string>
    <string name="recalls">Recalls</string>
    <string name="ratings">Ratings</string>
    <string name="reviews">Reviews</string>
    <string name="improvements">Improvements</string>
    <string name="favorites">Favorites</string>
    <string name="performance">Performance</string>
    <string name="car_images">Photos</string>
    <string name="dimensions">Dimensions</string>
    <string name="prices">Market Value</string>
    <string name="costs">Costs</string>
    <string name="equipments">Equipments</string>
    <string name="features">Features</string>
    <string name="options">Options</string>
    <string name="incentives">Incentives</string>
    <string name="msrp">MSRP</string>
    <string name="private_party">Private Party</string>
    <string name="invoice">Invoice</string>
    <string name="tmv">Used True Market Value</string>
    <string name="trade_in">Used Trade-In</string>
    <string name="rating_fun_to_drive">Fun-To-Drive</string>
    <string name="rating_build_quality">Build Quality</string>
    <string name="rating_reliability">Reliability</string>
    <string name="rating_comfort">Comfort</string>
    <string name="rating_performance">Performance</string>
    <string name="rating_int">Interior</string>
    <string name="rating_ext">Exterior</string>
    <string name="insurance">Insurance</string>
    <string name="depreciation">Depreciation</string>
    <string name="repairs">Repairs</string>
    <string name="maintenance">Maintenance</string>
    <string name="compressor">Compressor</string>
    <string name="displacement">Displacement</string>
    <string name="horsepower">Horsepower</string>
    <string name="torque">Torque</string>
    <string name="valves">Valves</string>
    <string name="drivetrain">Drivetrain</string>
    <string name="txn_type">Type</string>
    <string name="txn_speeds">Speeds</string>
    <string name="mpg">MPG</string>
    <string name="zero_sixty">0-60 Time</string>
    <string name="fuel_capacity">Fuel Capacity</string>
    <string name="turning_diameter">Turning Diameter</string>
    <string name="recall_num">Recall Number</string>
    <string name="num_effected">Total Effected</string>
    <string name="notification_date">Notification Date</string>
    <string name="recall_component">Component</string>
    <string name="recall_subcomponent">Sub-Component</string>
    <string name="manu_from">From</string>
    <string name="manu_to">To</string>
    <string name="defect_consequence">Consequence</string>
    <string name="defect_description">Description</string>
    <string name="pref_key_server_addr">Server Address</string>
    <string name="pref_ip_addr_default">http://52.32.245.43:8080</string>
    <string name="uploading">Uploading</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="more_cars">More Cars</string>
    <string name="dealer_info">Dealership</string>
    <string name="franchise_listings">Franchise Listings</string>
    <string name="start_chat">Chat!</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="error_connect">Failed to connect</string>
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="basic_search">Basics</string>
    <string name="basic_search_desc">Year, Make, Model &amp; BodyType</string>
    <string name="conditions_search">Conditions</string>
    <string name="conditions_search_desc">Used, New, and Mileage</string>
    <string name="mechanical_search">Powertrain</string>
    <string name="mechanical_search_desc">For Petrol-Heads</string>
    <string name="equipments_search">Colors &amp; Equipments</string>
    <string name="equipments_search_desc">Colors, Amneties, &amp; Options</string>
    <string name="no_recalls_search">No Recalls</string>
    <string name="no_major_complaints_search">Less Complaints</string>
    <string name="reliability_search_desc">Safety Ratings, Recalls, and Reliability Complaints</string>
    <string name="has_incentives">Has Ongoing Incentives</string>
    <string name="schedule_test_drive">Test Drive</string>
    <string name="dismiss">Dismiss</string>
    <string name="save_for_later">Save</string>
    <string name="contact_info">Contact Info</string>
    <string name="pref_key_email">E-Mail</string>
    <string name="pref_key_phone">Contact Number</string>
    <string name="pref_key_name">First Name</string>
    <string name="categories">Categories</string>
    <string name="incentivized_search">Special Offers</string>
    <string name="incentivized_desc">Find Cars With Ongoing Incentives</string>
    <string name="decent_power">Decent Power</string>
    <string name="decent_power_desc">Cars With 300+ Horsepower</string>
    <string name="super_sport">Super Fast</string>
    <string name="super_sport_desc">Cars With 500+ Horsepower</string>
    <string name="green_search">Efficiency-Minded</string>
    <string name="green_desc">Cars With 40+ MPG</string>
    <string name="four_wheel_drive_search">All Wheel Drive</string>
    <string name="turbo_search">Turbo</string>
    <string name="supercharger_search">Supercharged</string>
    <string name="boosted_desc">Turbo &amp; Supercharged</string>
    <string name="reliable_search">Fault Proof</string>
    <string name="reliable_desc">No Recalls &amp; Major Component Complaints</string>
    <string name="top_safety_search">Top Safety</string>
    <string name="top_safety_desc">Highest Rated Safety</string>
    <string name="coupe_search">Coupe</string>
    <string name="convertible_search">Convertible</string>
    <string name="sedan_search">Sedan</string>
    <string name="suv_search">SUV</string>
    <string name="truck_search">Truck</string>
    <string name="van_search">Van</string>
    <string name="wagon_search">Wagon</string>
    <string name="models_search">Models</string>
    <string name="low_insurance">Low Insurance</string>
    <string name="low_insurance_desc">Cars with Low Insurance Costs</string>
    <string name="low_repairs_search">Low Repairs &amp; Maintenance</string>
    <string name="low_depreciation">Low Depreciation</string>
    <string name="many_cylinders">8+ Cylinders</string>
    <string name="low_depreciation_desc">Cars with Low Depreciation</string>
    <string name="no_cars_found">No Cars Found, Please Modify Your Search</string>
    <string name="european">European</string>
    <string name="german_search">German</string>
    <string name="british_search">British</string>
    <string name="italian_search">Italian</string>
    <string name="rear_wheel_drive_search">Rear Wheel Drive</string>
    <string name="manual_search">manual</string>
    <string name="european_desc">Deutsch, English &amp; Italiano</string>
    <string name="listings">Listings</string>
    <string name="str_clear">Clear Filters</string>
    <string name="str_sort">Sort</string>
    <string name="str_filter">Filters</string>
    <string name="str_search_all">See Cars</string>
    <string name="str_image_search">Image</string>
    <string name="staggered">Filters</string>
    <string name="add_to_search">Add</string>
    <string name="search_hint">Enter Car Name Here</string>
    <string name="min_mpg">Min MPG</string>
    <string name="min_hp">Min Horsepower</string>
    <string name="min_tq">Min Torque</string>
    <string name="min_cylinders">Min Cylinders</string>
    <string name="see_listings">See Listings</string>
    <string name="ok">Ok</string>
    <string name="search_history">Saved Search</string>
    <string name="models">Models</string>
    <string name="dealership">Dealership</string>
    <string name="call">Call</string>
    <string name="save_search">Save Search</string>
    <string name="see_all_models">All Models</string>
    <string name="save">Save</string>
    <string name="sort_by">Sort By</string>
    <string name="efficient">40 MPG+ HWY</string>
    <string name="hybrid">Hybrid</string>
    <string name="manual">Manual</string>
    <string name="good_hp">300 hp+</string>
    <string name="super_hp">500 hp+</string>
    <string name="newer_than">Newer than</string>
    <string name="tags">Tags</string>
    <string name="electric_search">Electric</string>
    <string name="find_this_car">Find Car</string>
    <string name="listings_seen">SEEN</string>
    <string name="listings_fav">FAV</string>
    <string name="home">Home</string>
</resources>