<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/hp_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/horsepower"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/horsepower"/>
        </TableRow>
        <TableRow
            android:id="@+id/tq_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/torque"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/torque"/>
        </TableRow>
        <TableRow
            android:id="@+id/displacement_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/displacement"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/displacement"/>
        </TableRow>
        <TableRow
            android:id="@+id/compressor_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/compressor"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/compressor"/>
        </TableRow>
        <TableRow
            android:id="@+id/valves_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/valves"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/valves"/>
        </TableRow>
    </TableLayout>
</LinearLayout>