<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/mpg_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/mpg"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/mpg"/>
        </TableRow>
        <TableRow
            android:id="@+id/zs_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/zero_sixty"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/zero_sixty"/>
        </TableRow>
        <TableRow
            android:id="@+id/fc_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/fuel_capacity"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/fuel_capacity"/>
        </TableRow>
        <TableRow
            android:id="@+id/td_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/turning_diameter"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/turning_diameter"/>
        </TableRow>
    </TableLayout>
</LinearLayout>