<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_material_light"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">
        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_black" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/check_results"
        style="@style/LinearLayout.GuillotineItem">
        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_carmera_small_light" />
        <widgets.CanaroTextView
            android:id="@+id/carmera"
            style="@style/TextView.GuillotineItem"
            android:text="@string/carmera" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/start_verification"
        style="@style/LinearLayout.GuillotineItem">
        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_search_black_24dp" />
        <widgets.CanaroTextView
            android:id="@+id/car_search"
            style="@style/TextView.GuillotineItem"
            android:text="@string/car_search" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/saved_listings"
        style="@style/LinearLayout.GuillotineItem">
        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_favorite_border_black_24dp" />
        <widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/saved_listings" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settings"
        style="@style/LinearLayout.GuillotineItem">
        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings_black_24dp" />
        <widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>