<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@android:color/primary_text_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:id="@+id/component_name"/>
    <TextView
        android:textColor="@android:color/primary_text_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:id="@+id/vehicles_recalled"/>
    <TableLayout
        android:paddingTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/recall_num_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/recall_num"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/recall_num"/>
        </TableRow>
        <TableRow
            android:id="@+id/notification_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/notification_date"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/notification_date"/>
        </TableRow>
        <TableRow
            android:id="@+id/subcomponent_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/recall_subcomponent"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/recall_subcomponent"/>
        </TableRow>
        <TableRow
            android:id="@+id/manu_from_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/manu_from"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/manu_from"/>
        </TableRow>
        <TableRow
            android:id="@+id/manu_to_row">
            <TextView
                style="@style/entry_title"
                android:text="@string/manu_to"/>
            <TextView
                style="@style/entry_title"
                android:id="@+id/manu_to"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:lineSpacingMultiplier="1.2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/entry_title"
        android:id="@+id/defect_consequence"/>
    <TextView
        android:lineSpacingMultiplier="1.2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="16dp"
        style="@style/entry_title"
        android:id="@+id/defect_description"/>
</LinearLayout>