<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="2dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <ImageView
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:id="@+id/photo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gen_info"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"/>
            <TableLayout
                android:background="#55000000"
                style="@style/TableStyle"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content">
                <TableRow
                    android:id="@+id/hp_row"
                    style="@style/TableRowStyle">
                    <TextView
                        style="@style/SmallDescStyle"
                        android:text="@string/hp_desc"/>
                    <TextView
                        style="@style/SmallEntryStyle"
                        android:textAllCaps="true"
                        android:id="@+id/hp"/>
                </TableRow>
                <TableRow
                    android:id="@+id/tq_row"
                    style="@style/TableRowStyle">
                    <TextView
                        style="@style/SmallDescStyle"
                        android:text="@string/tq_desc"/>
                    <TextView
                        style="@style/SmallEntryStyle"
                        android:textAllCaps="true"
                        android:id="@+id/tq"/>
                </TableRow>
                <TableRow
                    style="@style/TableRowStyle">
                    <TextView
                        style="@style/SmallDescStyle"
                        android:text="@string/city_desc"/>
                    <TextView
                        style="@style/SmallEntryStyle"
                        android:textAllCaps="true"
                        android:id="@+id/city_mpg"/>
                </TableRow>
                <TableRow
                    style="@style/TableRowStyle">
                    <TextView
                        style="@style/SmallDescStyle"
                        android:text="@string/hwy_desc"/>
                    <TextView
                        style="@style/SmallEntryStyle"
                        android:textAllCaps="true"
                        android:id="@+id/hwy_mpg"/>
                </TableRow>
                <TableRow
                    style="@style/TableRowStyle">
                    <TextView
                        style="@style/SmallDescStyle"
                        android:text="@string/msrp_desc"/>
                    <TextView
                        style="@style/SmallEntryStyle"
                        android:textAllCaps="true"
                        android:id="@+id/msrp"/>
                </TableRow>
                <TableRow
                    style="@style/TableRowStyle">
                    <TextView
                        style="@style/SmallDescStyle"
                        android:text="@string/tmv_desc"/>
                    <TextView
                        style="@style/SmallEntryStyle"
                        android:textAllCaps="true"
                        android:id="@+id/tmv"/>
                </TableRow>
                <TextView
                    style="@style/SmallEntryStyle"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="true"
                    android:id="@+id/drivetrain"/>
            </TableLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>